# packages/aws/lambda/crates/api-generated/src/models/add_agent_request.rs
@@ -1,0 +1,55 @@
+/*
+ * Calculator API
+ *
+ * Simple API for mathematical operations
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct AddAgentRequest {
+    /// Registry object ID
+    #[serde(rename = "registry_id")]
+    pub registry_id: String,
+    #[serde(rename = "chain")]
+    pub chain: models::Chain,
+    /// Developer name
+    #[serde(rename = "developer")]
+    pub developer: String,
+    /// Agent name
+    #[serde(rename = "name")]
+    pub name: String,
+    /// Agent image URL
+    #[serde(rename = "image", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
+    pub image: Option<Option<String>>,
+    /// Agent description
+    #[serde(rename = "description", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
+    pub description: Option<Option<String>>,
+    /// Agent website
+    #[serde(rename = "site", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
+    pub site: Option<Option<String>>,
+    /// Supported blockchains
+    #[serde(rename = "chains")]
+    pub chains: Vec<String>,
+}
+
+impl AddAgentRequest {
+    pub fn new(registry_id: String, chain: models::Chain, developer: String, name: String, chains: Vec<String>) -> AddAgentRequest {
+        AddAgentRequest {
+            registry_id,
+            chain,
+            developer,
+            name,
+            image: None,
+            description: None,
+            site: None,
+            chains,
+        }
+    }
+}
+
