# packages/aws/lambda/crates/api-generated/src/models/add_app_request.rs
@@ -1,0 +1,51 @@
+/*
+ * Calculator API
+ *
+ * Simple API for mathematical operations
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct AddAppRequest {
+    /// Registry object ID
+    #[serde(rename = "registry_id")]
+    pub registry_id: String,
+    #[serde(rename = "chain")]
+    pub chain: models::Chain,
+    /// App name
+    #[serde(rename = "name")]
+    pub name: String,
+    /// App description
+    #[serde(rename = "description", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
+    pub description: Option<Option<String>>,
+    /// App image URL
+    #[serde(rename = "image", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
+    pub image: Option<Option<String>>,
+    /// App website
+    #[serde(rename = "site", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
+    pub site: Option<Option<String>>,
+    /// App capability object ID
+    #[serde(rename = "app_cap", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
+    pub app_cap: Option<Option<String>>,
+}
+
+impl AddAppRequest {
+    pub fn new(registry_id: String, chain: models::Chain, name: String) -> AddAppRequest {
+        AddAppRequest {
+            registry_id,
+            chain,
+            name,
+            description: None,
+            image: None,
+            site: None,
+            app_cap: None,
+        }
+    }
+}
+
