# packages/aws/lambda/crates/api-generated/src/models/add_developer_request.rs
@@ -1,0 +1,51 @@
+/*
+ * Calculator API
+ *
+ * Simple API for mathematical operations
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct AddDeveloperRequest {
+    /// Registry object ID
+    #[serde(rename = "registry_id")]
+    pub registry_id: String,
+    #[serde(rename = "chain")]
+    pub chain: models::Chain,
+    /// Developer name
+    #[serde(rename = "name")]
+    pub name: String,
+    /// GitHub username
+    #[serde(rename = "github")]
+    pub github: String,
+    /// Profile image URL
+    #[serde(rename = "image", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
+    pub image: Option<Option<String>>,
+    /// Developer description
+    #[serde(rename = "description", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
+    pub description: Option<Option<String>>,
+    /// Website URL
+    #[serde(rename = "site", default, with = "::serde_with::rust::double_option", skip_serializing_if = "Option::is_none")]
+    pub site: Option<Option<String>>,
+}
+
+impl AddDeveloperRequest {
+    pub fn new(registry_id: String, chain: models::Chain, name: String, github: String) -> AddDeveloperRequest {
+        AddDeveloperRequest {
+            registry_id,
+            chain,
+            name,
+            github,
+            image: None,
+            description: None,
+            site: None,
+        }
+    }
+}
+
