# packages/aws/lambda/crates/api-generated/src/models/mod.rs
@@ -1,3 +1,11 @@
+pub mod add_agent_request;
+pub use self::add_agent_request::AddAgentRequest;
+pub mod add_app_request;
+pub use self::add_app_request::AddAppRequest;
+pub mod add_developer_request;
+pub use self::add_developer_request::AddDeveloperRequest;
+pub mod chain;
+pub use self::chain::Chain;
 pub mod create_registry_request;
 pub use self::create_registry_request::CreateRegistryRequest;
 pub mod create_registry_response;
@@ -8,7 +16,21 @@ pub mod math_request;
 pub use self::math_request::MathRequest;
 pub mod math_response;
 pub use self::math_response::MathResponse;
+pub mod remove_agent_request;
+pub use self::remove_agent_request::RemoveAgentRequest;
+pub mod remove_app_request;
+pub use self::remove_app_request::RemoveAppRequest;
+pub mod remove_developer_request;
+pub use self::remove_developer_request::RemoveDeveloperRequest;
 pub mod sui_keypair_request;
 pub use self::sui_keypair_request::SuiKeypairRequest;
 pub mod sui_keypair_response;
 pub use self::sui_keypair_response::SuiKeypairResponse;
+pub mod transaction_response;
+pub use self::transaction_response::TransactionResponse;
+pub mod update_agent_request;
+pub use self::update_agent_request::UpdateAgentRequest;
+pub mod update_app_request;
+pub use self::update_app_request::UpdateAppRequest;
+pub mod update_developer_request;
+pub use self::update_developer_request::UpdateDeveloperRequest;
