# packages/aws/lambda/crates/api-generated/src/models/remove_agent_request.rs
@@ -1,0 +1,39 @@
+/*
+ * Calculator API
+ *
+ * Simple API for mathematical operations
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct RemoveAgentRequest {
+    /// Registry object ID
+    #[serde(rename = "registry_id")]
+    pub registry_id: String,
+    #[serde(rename = "chain")]
+    pub chain: models::Chain,
+    /// Developer name
+    #[serde(rename = "developer")]
+    pub developer: String,
+    /// Agent name
+    #[serde(rename = "name")]
+    pub name: String,
+}
+
+impl RemoveAgentRequest {
+    pub fn new(registry_id: String, chain: models::Chain, developer: String, name: String) -> RemoveAgentRequest {
+        RemoveAgentRequest {
+            registry_id,
+            chain,
+            developer,
+            name,
+        }
+    }
+}
+
