# packages/aws/lambda/crates/api-generated/src/models/remove_developer_request.rs
@@ -1,0 +1,39 @@
+/*
+ * Calculator API
+ *
+ * Simple API for mathematical operations
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct RemoveDeveloperRequest {
+    /// Registry object ID
+    #[serde(rename = "registry_id")]
+    pub registry_id: String,
+    #[serde(rename = "chain")]
+    pub chain: models::Chain,
+    /// Developer name
+    #[serde(rename = "name")]
+    pub name: String,
+    /// List of agent names to remove with the developer
+    #[serde(rename = "agent_names")]
+    pub agent_names: Vec<String>,
+}
+
+impl RemoveDeveloperRequest {
+    pub fn new(registry_id: String, chain: models::Chain, name: String, agent_names: Vec<String>) -> RemoveDeveloperRequest {
+        RemoveDeveloperRequest {
+            registry_id,
+            chain,
+            name,
+            agent_names,
+        }
+    }
+}
+
